--- a/web/index.html
+++ b/web/index.html
@@ -82,6 +82,7 @@
                 <div>                    
                     <div class="chart-container">
                         <div id="chart">
+                            <div class="count"></div>
                             <div class="btn-group btn-group-sm zoom">
                                 <button type="button" class="btn btn-outline-secondary zoom-in">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-zoom-in" viewBox="0 0 16 16">
